[Smart Lock, UI] Use correct string for the auto sign-in first run.

Method which check is settings are synced should check PRIORITY_PREFERENCE instead of PREFERENCE, because only they are synced on mobile devices.

BUG=590756

Review URL: https://codereview.chromium.org/1750603002

Cr-Commit-Position: refs/heads/master@{#378238}

Former-commit-id: d2329b1a69b53d8f4384c60d0cd31cd03908cde3